<resources>
    <string name="app_name">ZPlex</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="watchlist">Watchlist</string>
    <string name="share">Share</string>
    <string name="overview">Overview</string>
    <string name="guest_stars">Guest stars</string>
    <string name="discover">Discover</string>
    <string name="your_library_is_empty">Your library is empty</string>
    <string name="watch_now">Watch now</string>
    <string name="undo">Undo</string>
    <string name="share_links">Share links</string>
    <string name="library">Library</string>
    <string name="search_for_a_movie_tv_show">Search for a movie, tv show…</string>
    <string name="view_all_seasons">View all seasons</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="browsing_movies">Browsing movies</string>
    <string name="browsing_tv">Browsing shows</string>
    <string name="genre">Genre</string>
    <string name="sort">Sort</string>
    <string name="select_genre">Select genre</string>
    <string name="my_library">My Library</string>
    <string name="upcoming">Upcoming</string>
    <string name="keyword">Keyword</string>
    <string name="configure_your_drive_client">Configure your drive client</string>
    <string name="client_id">Client ID</string>
    <string name="client_secret">Client secret</string>
    <string name="redirect_uri">Redirect uri</string>
    <string name="need_help">Need help?</string>
    <string name="drive_scope">https://www.googleapis.com/auth/drive</string>
    <string name="scopes">Scopes</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_authorization_code">Enter authorization code?</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="important_note_message">Due to recent changes made by Google, it is no longer
        possible to directly copy authorization code from the webpage after completion of OAuth
        Flow.\n\nYou will need to copy the entire url from the browser address bar. This page will
        not load and will show an error.\n\nPlease copy the entire url from the address bar and
        paste it in the dialog box.</string>
    <string name="please_enter_auth_url">Please enter authorization url</string>
    <string name="authorization_code_example">Ex:\nhttp://127.0.0.1:53682/?code=4/0BX2XfWi1VC9Iadsaa1hIX80rd17crGFCgyHgR_8rwkrIRJJf18LlSGbBWeg0wbZJdEZ3tm3A</string>
    <string name="authorization_url">Authorization url</string>
    <string name="authorization_url_hint">Authorization url</string>
    <string name="submit">Submit</string>
    <string name="choose_media_folders">Choose media folders</string>
    <string name="choose_movies_folder">Choose movies folder</string>
    <string name="choose_shows_folder">Choose shows folder</string>
    <string name="done">Done</string>
    <string name="my_drive">My drive</string>
    <string name="shared_drives">Shared drives</string>
    <string name="shared_with_me">Shared with me</string>
    <string name="starred">Starred</string>
    <string name="select">Select</string>
    <string name="no_files_found">No files found</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="rewind_10_seconds">Rewind 10 seconds</string>
    <string name="skip_10_seconds">Skip 10 seconds</string>
    <string name="pip_mode">PiP Mode</string>
    <string name="rotate">Rotate</string>
    <string name="playback_speed">Playback speed</string>
    <string name="resize">Resize</string>
    <string name="chapters">Chapters</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="track_off">Off</string>
    <string name="ui_chapter_fallback">Chapter %1$d (%2$s)</string>
    <string name="ui_chapter">%1$s (%2$s)</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="select_subtitle">Select subtitle track</string>
    <string name="select_audio">Select audio track</string>
    <string name="select_speed">Playback speed</string>
    <string name="remove_from_watched">Remove from history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="app_settings">App settings</string>
    <string name="google_drive">Google Drive</string>
    <string name="client_configuration">Client configuration</string>
    <string name="configure_drive_client">Configure your client id, client secret and redirect uri</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="login_to_google_drive">Please login to your Google Drive account</string>
    <string name="select_movies_folder">Select movies folder</string>
    <string name="select_movies">Select the folder where your movies are stored</string>
    <string name="select_shows_folder">Select shows folder</string>
    <string name="select_shows">Select the folder where your tv shows are stored</string>
    <string name="selected">Selected</string>
    <string name="change_movies_folder_title">Do you want to change the movies folder?</string>
    <string name="remove_movies_message">This will remove all movies from the library.</string>
    <string name="change_shows_folder_title">Do you want to change the shows folder?</string>
    <string name="remove_shows_message">This will remove all shows from the library.</string>
    <string name="log_out">Log out</string>
    <string name="revoke_credentials_and_clear_indexing">Revoke the Google Drive login credentials and clear the indexing for all media files</string>
    <string name="logout_title">Are you sure you want to log out?</string>
    <string name="please_wait">Please wait…</string>
    <string name="scan_for_media">Scan for media</string>
    <string name="scanning">Scanning…</string>
    <string name="never">Never</string>
    <string name="last_scanned">Last scanned: %1$s</string>
    <string name="scanning_in_progress">Scanning in progress…</string>
    <string name="continue_watching">Continue watching</string>
    <string name="ok">OK</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="download_episode">Do you want to download this episode?</string>
    <string name="starting_download">Starting download…</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_offline">Remove from offline</string>
    <string name="downloaded">Downloaded</string>
    <string name="imdb_logo">Imdb Logo</string>
    <string name="indexing">Indexing…</string>
    <string name="current_cached_data">Current cached data</string>
    <string name="cache_items_stored">%1$d items stored in cache</string>
    <string name="reset_cache_dialog_title">Are you sure you want to reset the cache?</string>
    <string name="reset_cache_dialog_message">This will permanently delete all cached data used by the app. You won’t be able to undo this action.</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="playlist">Playlist</string>
    <string name="all_seasons">All seasons</string>
    <string name="finale">Finale</string>
    <string name="confirm_delete_episode">Are you sure you want to delete "%1$s"?</string>
    <string name="confirm_delete_movie">Are you sure you want to delete "%1$s"?</string>
    <string name="confirm_download">Do you want to download "%1$s"?</string>
    <string name="connect_to_server">Connect to Server</string>
    <string name="host">Host</string>
    <string name="host_helper_text">Example: 192.168.1.100 or https://myserver.com</string>
    <string name="port">Port</string>
    <string name="port_helper_text">Example: 8096 or 443</string>
    <string name="connect">Connect</string>
    <string name="failed_to_connect">Failed to Connect</string>
    <string name="invalid_host_missing_protocol">Invalid host. Please include protocol (http:// or https://).</string>
    <string name="error_invalid_server">Unable to connect to the server. Please check the address and try again.</string>
    <string name="something_went_wrong_reason">Something went wrong: %1$s</string>
    <string name="error_network">A network error occurred. Please check your connection and try again.</string>
    <string name="invalid_port_range">Port must be between 1 and 65535.</string>
    <string name="host_and_port_cannot_be_empty">Host and port cannot be empty.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an account?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_access_your_account">Sign in to access your account</string>
    <string name="login_incorrect_credentials">Incorrect username or password. Please try again.</string>
    <string name="login_not_authorized">You are not authorized to access this service.</string>
    <string name="login_server_unavailable">Server is currently unavailable. Please try again later.</string>
    <string name="login_resource_not_found">Requested resource not found.</string>
    <string name="login_failed">Login failed. Please try again.</string>
    <string name="login_no_connection">Unable to connect. Please check your internet connection.</string>
    <string name="login_unexpected_error">An unexpected error occurred. Please try again.</string>
    <string name="login_http_error">Unexpected response from server (HTTP %1$d).</string>
    <string name="login_empty_details">The server returned an unexpected response. Please try again later.</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="signup_invalid_form_details">Please fill all required fields correctly</string>
    <string name="signup_duplicate_user">This username is already taken</string>
    <string name="signup_duplicate_user_details">The username you entered already exists. Please choose another one.</string>
    <string name="something_went_wrong_details">Unexpected server error occurred</string>
    <string name="error_network_details">Unable to connect to server. Please check your connection.</string>
    <string name="signup_success">Signup Successful</string>
    <string name="signup_success_message">Your account has been created. Please login.</string>
    <string name="dialog_title_account_incomplete">Account Setup Incomplete</string>
    <string name="dialog_message_no_capability">
        Your account has been created successfully, but it doesn’t have the required access enabled yet.
        This usually happens with new accounts.

        Please reach out to your administrator to enable the necessary capabilities so you can start using the app.
    </string>
    <string name="dialog_button_got_it">Got it</string>
    <string name="no_data_available_at_the_moment">No data available at the moment.</string>
    <string name="response_body_was_null">Response body was null.</string>
</resources>