<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/downloadsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_downloads_24"
        android:title="@string/downloads" />

    <item
        android:id="@+id/moviesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_movies_24"
        android:title="@string/movies" />

    <item
        android:id="@+id/tvShowsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_tvshows_24"
        android:title="@string/tv_shows" />

</menu>