<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:transitionGroup="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:padding="4dp"
            android:theme="@style/MenuTheme"
            app:navigationIcon="@mipmap/ic_launcher_foreground"
            app:titleTextAppearance="@style/titleTextAppearance"
            app:titleTextColor="@color/textColor" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/connect_to_server"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hostTextField"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/host"
            app:helperText="@string/host_helper_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:lines="1"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/portTextField"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/port"
            app:helperText="@string/port_helper_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/btnConnectFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConnect"
                style="?attr/materialButtonTonalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/connect"
                android:textAllCaps="true"
                app:cornerRadius="6dp" />

            <ProgressBar
                android:id="@+id/buttonProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:indicatorSize="24dp"
                app:trackThickness="8dp"
                tools:visibility="visible" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="?attr/materialButtonElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:cornerRadius="6dp" />

    </LinearLayout>
</ScrollView>