<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_watch_now"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:padding="12dp"
        android:text="@string/watch_now"
        android:textSize="16sp"
        app:icon="@drawable/ic_play_circle_24"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/watchlist"
        android:textColor="@color/textColor"
        app:icon="@drawable/ic_add_24"
        app:iconGravity="textStart"
        app:iconTint="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_watch_now"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/fadedColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:text="@string/share"
        android:textColor="@color/textColor"
        app:icon="@drawable/ic_share_24dp"
        app:iconGravity="textStart"
        app:iconTint="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_save"
        app:layout_constraintTop_toTopOf="@+id/btn_save"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/fadedColor" />

</androidx.constraintlayout.widget.ConstraintLayout>